fix room invite overlapping keyboard

--- a/express/css/style.css
+++ b/express/css/style.css
@@ -15,6 +15,7 @@ body {
 	right: 1%;
 	bottom: 2%;
 	width: 400px;
+	z-index: -10;
 }
 .unselectable {
     -webkit-touch-callout: none;
